style.css
body
{
  margin: 0;
  padding: 0;
  
  background: #160020;
  color: #b8b8b8;
  font-family: sans-serif;
}

li{
  padding:1px;
}

#menuToggle
{
  display: block;
  position: relative;
  top: 50px;
  left: 50px;
  
  z-index: 1;
  
  -webkit-user-select: none;
  user-select: none;
}

#menuToggle a
{
  text-decoration: none;
  color: #160020;
  
  transition: color 0.3s ease;
}

#menuToggle a:hover
{
  color: tomato;
}


#menuToggle input
{
  display: block;
  width: 40px;
  height: 32px;
  position: absolute;
  top: -7px;
  left: -5px;
  
  cursor: pointer;
  
  opacity: 0; 
  z-index: 2; 
  
  -webkit-touch-callout: none;
}


#menuToggle span
{
  display: block;
  width: 33px;
  height: 4px;
  margin-bottom: 5px;
  position: relative;
  
  background: #b8b8b8;
  border-radius: 3px;
  
  z-index: 1;
  
  transform-origin: 4px 0px;
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
              opacity 0.55s ease;
}

#menuToggle span:first-child
{
  transform-origin: 0% 0%;
}

#menuToggle span:nth-last-child(2)
{
  transform-origin: 0% 100%;
}


#menuToggle input:checked ~ span
{
  opacity: 1;
  transform: rotate(45deg) translate(-2px, -1px);
  background: #160020;
}

#menuToggle input:checked ~ span:nth-last-child(3)
{
  opacity: 0;
  transform: rotate(0deg) scale(0.2, 0.2);
}


#menuToggle input:checked ~ span:nth-last-child(2)
{
  transform: rotate(-45deg) translate(0, -1px);
}


#menu
{
  position: absolute;
  width: 300px;
  margin: -100px 0 0 -50px;
  padding: 50px;
  padding-top: 125px;
  
  background: #b8b8b8;
  list-style-type: none;
  -webkit-font-smoothing: antialiased;
  font-family: "Montserrat", sans-serif;

  
  transform-origin: 0% 0%;
  transform: translate(-100%, 0);
  
  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
}

#menu li
{
  padding: 10px 0;
  font-size: 22px;
}


#menuToggle input:checked ~ ul
{
  transform: none;
}

a:link{
  color: #b8b8b8;
  font-weight: bold;
}

a:visited{
  color: #b8b8b8;
  font-weight: bold;
}

a:hover{
  color: blueviolet;
  font-weight: bold;
}

a:active{
  color: #b8b8b8;
  font-weight: bold;
}

h1{
    font-family: 'Montserrat', sans-serif;
    font-size: 23;
}

h2{
    font-family: 'Montserrat', sans-serif;

}

h3{
  font-family: 'Montserrat', sans-serif;
}

.header{
  font-family: 'Montserrat', sans-serif;
  font-size: 23;
}

